--- a/about_us.html
+++ b/about_us.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="https://github.com/WebProjectAITU/bootstrap_assigmnent.git">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./about_us.css" >
+    <link rel="stylesheet" href="css/about_us.css" >
     <title>Document</title>
 </head>
 <body>
@@ -44,10 +45,10 @@
         </div>
         <div class="text">
             <h1>Authors</h1>
-                <img style="width: 150px; height: 350px; margin-right: 25px;" src="Безымянный.png">
-                <img style="width: 150px; height: 350px; margin-right: 25px;" src="Безымянный1.png">
-                <img style="width: 150px; height: 350px; margin-right: 25px;" src="Безымянный2.png">
-                <img style="width: 150px; height: 350px;" src="Безымянный3.png">
+                <img style="width: 150px; height: 350px; margin-right: 25px;" src="img/Безымянный.png">
+                <img style="width: 150px; height: 350px; margin-right: 25px;" src="img/Безымянный1.png">
+                <img style="width: 150px; height: 350px; margin-right: 25px;" src="img/Безымянный2.png">
+                <img style="width: 150px; height: 350px;" src="img/Безымянный3.png">
         </div>
     </div>
     <footer>
