--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://github.com/WebProjectAITU/bootstrap_assigmnent.git">
+    <base href="https://github.com/WebProjectAITU/bootstrap_assigmnent">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <title>Document</title>
 </head>
 <body>
