--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <base href="https://github.com/WebProjectAITU/bootstrap_assigmnent"> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="index.html/#to-recipes">Recipes</a></li>
-                <li><a>About us</a></li>
+                <li><a href="about_us.html">About us</a></li>
             </ul>
         </nav>
         <div class="search">
